gateway-api/openresty/slo/referencegrant-svc.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: slo-httproute
  namespace: llm-scaler
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: llm-route
  to:
  - group: ""
    kind: Service
    name: slo-api
