gateway-api/openresty/slo/httproute-slo.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: slo-api
  namespace: llm-route
spec:
  parentRefs:
  - name: openresty
    namespace: llm-route
  hostnames:
  - "llm.example.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /api/v1/admin/slo
    filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /
    backendRefs:
      - name: slo-api
        namespace: llm-scaler
        port: 80
